Fixed layout issues

--- a/D3Learning/wwwroot/css/site.css
+++ b/D3Learning/wwwroot/css/site.css
@@ -1,60 +1,94 @@
 ﻿
-body{
+html, body {
     overflow: hidden;
-}
-
-#sidebar-wrapper {
-    width: 20%;
     height: 100%;
-    overflow-y: hidden;
+    width: 100%;;
+}
+
+.wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%
+}
+
+.sidebar {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    top: 0px;
+    width: 200px;
+    height: auto;
+    padding: 15px;
+}
+
+.sidebar div.panel-primary{
+    position: relative;
+}
+
+.sidebar div.panel-body-wrapper {
     overflow-x: hidden;
-    float: left;
-    padding: 15px;
+    overflow-y: auto;
+    top: 41px
 }
 
-#page-content-wrapper {
-    float: right;
-    width: 80%;
-    padding: 15px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    margin: 0;
-    padding: 0;
+.sidebar ul {
     list-style: none;
+    padding: 0px;
 }
 
-.sidebar-nav li {
+.sidebar li {
     text-indent: 20px;
     line-height: 40px;
 }
 
-.sidebar-nav li a {
+.sidebar li a {
     display: block;
     text-decoration: none;
     color: #999999;
 }
 
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    background: rgba(255, 255, 255, 0.2);
+.sidebar li a:hover {
+    text-decoration: underline;
 }
 
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
+.sidebar li.selected {
+    border: solid 1px #3174AE;
+}
+
+.sidebar li a:active,
+.sidebar li a:focus {
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
+.sidebar > .sidebar-brand {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
 }
 
-.sidebar-nav > .sidebar-brand a {
+.sidebar > .sidebar-brand a {
     color: #999999;
+}
+
+.sidebar > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+.content {
+    position: absolute;
+    left: 200px;
+    right: 0px;
+    bottom: 0px;
+    top: 0px;
+    width: auto;
+    height: auto;
+    padding: 15px;
+}
+
+.content div.panel-primary{
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .full {
@@ -72,6 +106,23 @@ body{
     right: 0;
 }
 
-li.active{
-    border: solid #3175AE 1px;
+.no-margin {
+    padding: 0px;
+    margin: 0px;
+}
+
+
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
